# decode-orc

./: .clang-tidy  .envrc  .gitignore  .gitmodules  AGENTS.md  BUILD.md  BUILD_VERSIONS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  Doxyfile  PAL_FRAME_TO_FIELD_TRANSLATION.md  README.md  RELEASE_NOTES.md  SECURITY.md  TESTING.md  check_mvp_architecture.sh  encode-tests.sh  flake.nix  io.github.simoninns.decode-orc.yml  mkdocs.yml  process-test-data.sh  test-field-mapping.sh  test_chroma_registration.cpp  test_fftw_planning  test_fftw_planning.cpp  test_format_filter.cpp  test_mvp_compiler_enforcement.sh  update_stage_headers.sh  vcpkg.json  verify-encapsulation.sh
legacy-tools/ld-disc-crapper/: CMakeLists.txt  README.md  main.cpp
orc/: .clang-tidy  CMakeLists.txt  README.md  mainpage.md  version.h.in
orc-chroma-decoder/: CMakeLists.txt  README.md  REFACTORING-PLAN.md
orc-chroma-decoder/src/: decoder.cpp  palcolour.cpp  transformpal.cpp  transformpal2d.cpp
orc-chroma-decoder/tests/: .gitignore  Makefile  QUICKREF.md  README.md  generate-references.sh  profile-decoder.sh  profile-results.txt  run-tests.sh  test-config.ini
orc-chroma-decoder/tests/references/: test-signatures.txt  test-signatures.txt.example
orc-tests/core/: CMakeLists.txt
orc-tests/core/functional/: CMakeLists.txt
orc-tests/core/unit/: CMakeLists.txt  factories_interface_mock.h
orc-unit-tests/core/: CMakeLists.txt  factories_interface_mock.h
orc-unit-tests/core/include/: file_io_interface_mock.h  observation_context_interface_mock.h  video_field_representation_mock.h
orc-unit-tests/core/preview_types/: preview_carrier_conversion_test.cpp  preview_helpers_yc_combine_test.cpp  preview_types_test.cpp  preview_view_registry_test.cpp
orc-unit-tests/core/stages/: stage_factories_interface_mock.h
orc/cli/: CMakeLists.txt  README.md  command_analyze_field_mapping.cpp  command_analyze_field_mapping.h  command_analyze_source_aligns.cpp  command_analyze_source_aligns.h  command_plugins.cpp  command_process.cpp  command_process.h  orc_cli.cpp  orc_process.cpp
orc/common/: CMakeLists.txt  crash_handler.cpp  logging.cpp  node_id.cpp  parameter_util.cpp
orc/common/include/: amplitude_conversion.h  common_types.h  crash_handler.h  cvbs_signal_constants.h  error_codes.h  error_types.h  field_id.h  frame_id.h  line_numbering.h  logging.h  node_id.h  node_type.h  parameter_types.h
orc/core/: CMakeLists.txt  artifact.cpp  biphase_observer.cpp  burst_level_analysis_decoder.cpp  closed_caption_observer.cpp  colour_preview_conversion.cpp  core_observation_service.cpp  crash_handler.cpp  dag_executor.cpp  dag_field_renderer.cpp  dag_frame_renderer.cpp  dag_serialization.cpp  dropout_analysis_decoder.cpp  dropout_correct_stage.cpp  dropout_decision.cpp  dropout_util.cpp  eia608_decoder.cpp  factories.cpp  factories.h  factories_interface.h  field_id.cpp  fm_code_observer.cpp  logging.cpp  node_id.cpp  node_type.cpp  observation_cache.cpp  observation_context.cpp  observation_wrapper_representation.cpp  observer.cpp  observer_config.cpp  passthrough_complex_stage.cpp  passthrough_merger_stage.cpp  passthrough_splitter_stage.cpp  passthrough_stage.cpp  pipeline_validator.cpp  plugin_remote_loader.cpp  preview_helpers.cpp  preview_renderer.cpp  preview_view_registry.cpp  project.cpp  (+21 more)
orc/core/analysis/: analysis_context.h  analysis_init.cpp  analysis_init.h  analysis_progress.h  analysis_registry.cpp  analysis_registry.h  analysis_result.h  analysis_tool.h  batch_analysis_tool.cpp  batch_analysis_tool.h  disc_mapper_policy.cpp  disc_mapper_policy.h  dropout_editor_tool.cpp  dropout_editor_tool.h
orc/core/hints/: active_line_hint.h  dropout_hint.h  field_parity_hint.h  hint.h  pal_phase_hint.h
orc/core/include/: artifact.h  biphase_observer.h  buffered_file_io.h  burst_level_analysis_decoder.h  closed_caption_observer.h  colour_preview_conversion.h  colour_preview_provider.h  crash_handler.h  cvbs_signal_constants.h  dag_executor.h  dag_field_renderer.h  dag_serialization.h  disc_quality_observer.h  dropout_analysis_decoder.h  dropout_correct_stage.h  dropout_decision.h  dropout_run.h  dropout_util.h  eia608_decoder.h  field_id.h  file_io_interface.h  fm_code_observer.h  frame_descriptor.h  frame_id.h  frame_line_util.h  lead_in_out_observer.h  logging.h  lru_cache.h  node_id.h  node_type.h  observation_cache.h  observation_context.h  observation_context_interface.h  observation_schema.h  (+35 more)
orc/gui/: CMakeLists.txt  Info.plist.in  amplitude_unit_helpers.h  analysisdialogbase.cpp  analysisdialogbase.h  burstlevelanalysisdialog.cpp  burstlevelanalysisdialog.h  configdialogbase.cpp  configdialogbase.h  dageditorwindow.cpp  dageditorwindow.h  dagnodeeditdialog.cpp  dagnodeeditdialog.h  dagviewerwidget.cpp  dagviewerwidget.h  dropout_editor_dialog.cpp  dropout_editor_dialog.h  dropoutanalysisdialog.cpp  dropoutanalysisdialog.h  ffmpegpresetdialog.cpp  ffmpegpresetdialog.h  field_frame_presentation.cpp  field_frame_presentation.h  fieldmappinglookupdialog.cpp  fieldmappinglookupdialog.h  fieldpreviewwidget.cpp  fieldpreviewwidget.h  fieldtimingdialog.cpp  fieldtimingdialog.h  fieldtimingwidget.cpp  fieldtimingwidget.h  framescopedialog.cpp  framescopedialog.h  frametimingdialog.cpp  frametimingdialog.h  frametimingwidget.cpp  frametimingwidget.h  generic_analysis_dialog.cpp  generic_analysis_dialog.h  guiproject.cpp  (+62 more)
orc/presenters/: CMakeLists.txt
orc/public/: CMakeLists.txt  orc_analysis.h  orc_rendering.h  orc_types.h  orc_vectorscope.h  orc_video_metadata.h  validate_mvp.sh
orc/sdk/: CMakeLists.txt  abi_history.yaml  sdk_headers.yaml
orc/tests/: CMakeLists.txt  test_dag_executor.cpp  test_dag_field_renderer.cpp  test_field_id.cpp  test_real_tbc_data.cpp  test_tbc_io.cpp  test_vbi_observers.cpp  test_vits_observer.cpp
orc/view-types/: CMakeLists.txt  orc_analysis.h  orc_logging.h  orc_preview_carriers.h  orc_preview_types.h  orc_preview_views.h  orc_rendering.h  orc_source_parameters.h  orc_vectorscope.h  orc_video_metadata.h
(+1068 files in other folders)
